feat: merge auth and client (#33)
* feat: merge auth and client

* working frontend

* working frontend and cleaning up files

---------

Co-authored-by: tgraham89 <thomashgraham@gmail.com>

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,16 +24,12 @@
         firebase.initializeApp(firebaseConfig);
     </script>
     <script src="https://www.gstatic.com/firebasejs/ui/6.0.2/firebase-ui-auth.js"></script>
-    <link
-            type="text/css"
-            rel="stylesheet"
-            href="https://www.gstatic.com/firebasejs/ui/6.0.2/firebase-ui-auth.css"
-    />
+    <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/6.0.2/firebase-ui-auth.css" />
     <script type="text/javascript">
         const auth = firebase.auth();
         // FirebaseUI config.
         const uiConfig = {
-            signInSuccessUrl: '/interface',  // The URL to redirect after successful login
+            signInSuccessUrl: '/interface.html',  // The URL to redirect after successful login
             signInFlow: "popup",
             signInOptions: [
                 // TODO: Remove the providers you don't need for your app.
@@ -48,6 +45,7 @@
                 // },
                 // firebase.auth.TwitterAuthProvider.PROVIDER_ID,
                 // firebase.auth.GithubAuthProvider.PROVIDER_ID,
+
                 {
                     provider: firebase.auth.EmailAuthProvider.PROVIDER_ID,
                     requireDisplayName: true,
@@ -65,7 +63,7 @@
                 firebaseui.auth.AnonymousAuthProvider.PROVIDER_ID,
             ],
             callbacks: {
-                signInSuccessWithAuthResult: function(authResult, redirectUrl) {
+                signInSuccessWithAuthResult: function (authResult, redirectUrl) {
                     console.log('User signed in:', authResult.user);
                     localStorage.clear();
                     localStorage.setItem('user', authResult.user);
@@ -80,7 +78,7 @@
                     // window.location.href = 'interface.html';
                     return true;
                 },
-                signInFailure: function(error) {
+                signInFailure: function (error) {
                     console.error('Sign-in failed:', error);
                     return false;
                 }
@@ -107,7 +105,7 @@
             }
         });
 
-        window.onload = function() {
+        window.onload = function () {
             firebase.auth().signOut().then(() => {
                 console.log("User signed out on page load");
                 localStorage.clear(); // Clear stored tokens
@@ -115,7 +113,9 @@
         };
     </script>
 </head>
+
 <body>
     <div id="firebaseui-auth-container"></div>
 </body>
+
 </html>
